@@ -1,3 +1,8 @@
+
+05/06/2023:
+	- Updated SPECTRA.cc to use stack names
+
+
 31/05/2023:
 	- Updated IIIF to default to version 3 of the Image API
 
